# lips

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  NEWS.md  README  README.md  lipsrc
.gitea/workflows/: fedora39.yaml  fedora40.yaml  fedora41-clang.yaml  fedora41.yaml  package-test.yaml  ubuntu-22.04.yml  ubuntu-24.04.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  ubuntu-18.04.yml  ubuntu-20.04.yml  ubuntu-22.04.yml  ubuntu-24.04.yml
Old/: Revision  glob.c
Old/misc/: lips.cmd  lips.ctl  lips.icon  v118-120.diff
Old/util/: conf  maketags  mkdiffs  release  savediff
cmake/: build.cmake  clang-format.cmake  clang-tidy.cmake  cmake-external.cmake  cmake-format.cmake  config.cmake.in  container.cmake  coverage.cmake  docker.cmake  external.cmake  install.cmake  lips-config.cmake
doc/: Bugs  Lips.man.ingwa  Lisplib.man  Mandiff  Todo  Todo.doc  Todo.ms  copyright.sh  exclude.txt  ingwa-kommenta  klisp.txt  lips.man
docs/: 01_copyright.tex  06_shell.tex  07_embedded.tex  08_functions.tex  Doxygen  Edits  checklist.md  copyright.sh  copyright.tex  embedded.tex  evaluation.tex  functions.tex  header.tex  intro.tex  library.tex  lips.tex  make_docs.py  properties.tex  reference.md  shell.tex  syntax.tex  variables.tex
docs/reference/: alloc.md  arith.md  exec.md  file.md  list.md  logic.md  low.md  map.md  pred.md  predicate.md  prim.md  property.md  reference.md  string.md  types.md  user.md  vm.md
libisp/: CMakeLists.txt  Makefile  alloc.c  alloc.cc  alloc.hh  arith.c  arith.cc  arith.hh  base.hh  config.h  config.hh  constants.h  constants.hh  debug.cc  debug.hh  defs.h  defs.hh  error.h  error.hh  eval.c  eval.cc  eval.hh  except.hh  file.c  file.cc  file.hh  foo  func.h  func.hh  garb.h  garb.hh  init.c  init.cc  init.hh  io.cc  io.h  io.hh  iter.hh  libisp.h  libisp.hh  (+49 more)
lipscode/: alias  edit  example.lipsrc  let  lipsrc  list  misc  pretty
lipscode/Work/: digsim  pp  rev
lisp/: alias.lisp  bank.lisp  dirstack.lisp  edit.lisp  let.lisp  lipsrc.lisp  list.lisp  misc.lisp  pretty.lisp  sortlist.lisp  test.lisp
lisp/Work/: compiler.lisp  digsim.bug  digsim.lisp  oldedit.lisp  pp.lisp  rev.lisp  transform.lisp
src/: CMakeLists.txt  Makefile  exec.c  exec.cc  exec.h  exec.hh  glob.c  glob.cc  glob.h  glob.hh  lips.h  main.c  main.cc  main.h  main.hh  os.cc  os.hh  term.c  term.cc  term.hh  top.c  top.cc  top.h  top.hh
src/lips/: CMakeLists.txt  env.cc  env.hh  exec.cc  exec.hh  exec.test.cc  glob.cc  glob.hh  glob.test.cc  job.cc  job.hh  lips_error.hh  lips_test.cc  main.cc  main.hh  os.cc  os.hh  term.cc  term.hh  top.cc  top.hh  transform.cc  transform.hh  transform.test.cc
src/lisp/: CMakeLists.txt  alloc.bench.cc  alloc.cc  alloc.hh  alloc.test.cc  arith.cc  arith.hh  arith.test.cc  atoms.hh  base.hh  check.hh  check.test.cc  context.cc  context.hh  context.test.cc  debug.cc  debug.hh  debug.test.cc  error.hh  error.test.cc  eval.cc  eval.hh  eval.test.cc  except.hh  exit.hh  file.cc  file.hh  file.test.cc  io.cc  io.hh  io.test.cc  iter.hh  lexer.cc  lexer.hh  lexer.test.cc  libisp.hh  liblisp.hh  lisp.cc  lisp.hh  lisp.test.cc  (+69 more)
src/lisp/details/: alloc.hh  arith.hh  debug.hh  file.hh  list.hh  logic.hh  low.hh  map.hh  pred.hh  predicate.hh  prim.hh  prop.hh  property.hh  string.hh  user.hh  vm.hh
src/lisp/src/lisp/: CMakeLists.txt  alloc.cc  alloc.hh  alloc.test.cc  arith.cc  arith.hh  arith.test.cc  debug.cc  debug.hh  debug.test.cc  defs.hh  eval.cc  eval.hh  eval.test.cc  except.hh  file.cc  file.hh  file.test.cc  io.cc  io.hh  io.test.cc  iter.hh  libisp.hh  lisp.cc  lisp.hh  logic.cc  logic.hh  logic.test.cc  low.cc  low.hh  low.test.cc  main.cc  map.cc  map.hh  map.test.cc  posix.cc  posix.hh  pred.cc  pred.hh  pred.test.cc  (+16 more)
src/test/: CMakeLists.txt  alloc.test.cc  arith.test.cc  debug.test.cc  eval.test.cc  file.test.cc  io.test.cc  lexer.test.cc  lisp.test.cc  lisp_test.cc  logic.test.cc  low.test.cc  main.test.cc  map.test.cc  parser.test.cc  pool.test.cc  pred.test.cc  prim.test.cc  prop.test.cc  reader.test.cc  repl.test.cc  string.test.cc  symbol.test.cc  user.test.cc
test/: Alpine  CMakeLists.txt  Fedora-39  Fedora-40  Fedora-41  Ubuntu-18.04  Ubuntu-20.04  Ubuntu-22.04  Ubuntu-22.04-clang  Ubuntu-24.04  build.sh  package_test.cc  run.sh  tidy.sh
test/package/: CMakeLists.txt
